objects/tractionguest__Guest_Event__c.object
<CustomObject>
    <description>The record used to store details of visit (date, time, reason etc.)</description>
    <fields>
        <fullName>tractionguest__Guest__c</fullName>
        <label>Guest</label>
        <referenceTo>tractionguest__Guest__c</referenceTo>
        <relationshipLabel>Guest Events</relationshipLabel>
        <relationshipName>Guest_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tractionguest__Host__c</fullName>
        <label>Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tractionguest__Sign_in_Time_PST__c</fullName>
        <formula>VALUE(
            MID(
            TEXT(
            CreatedDate + -7/24
            ),
            12, 2)
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sign in Time (PST)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tractionguest__Visit_Reason__c</fullName>
        <label>Visit Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Guest Event</label>
    <nameField>
        <displayFormat>GE-{00000}</displayFormat>
        <label>Guest Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guest Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>